# DirectX12Demos

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProject.bat  GenerateSolution.bat  README.md
AppModels/: CMakeLists.txt
AppModels/inc/: AppStructures.h  FrameResources.h  ModelsApp.h  ShadowMap.h
AppModels/shaders/: BlurPixelShader.hlsl  BlurVertexShader.hlsl  Common.hlsli  FullScreenQuadVS.hlsl  GeoPixelShader.hlsl  GeoUtils.hlsli  GeoVertexShader.hlsl  LightUtils.hlsli  NormPixelShader.hlsl  SSAONormVPixelShader.hlsl  SSAOPixelShader.hlsl  SSAOVertexShader.hlsl  ShadowPS.hlsl  ShadowVS.hlsl
AppModels/src/: FrameResources.cpp  ModelsApp.cpp  ShadowMap.cpp  main.cpp
AppSimpleGeometry/: CMakeLists.txt
AppSimpleGeometry/inc/: AppStructures.h  FrameResources.h  SimpleGeoApp.h
AppSimpleGeometry/shaders/: GeoPixelShader.hlsl  GeoUtils.hlsli  GeoVertexShader.hlsl  LightUtils.hlsli
AppSimpleGeometry/src/: FrameResources.cpp  SimpleGeoApp.cpp  main.cpp
MyD3D12Lib/: CMakeLists.txt
MyD3D12Lib/inc/MyD3D12Lib/: BaseApp.h  Camera.h  CommandQueue.h  D3D12Utils.h  Helpers.h  MeshGeometry.h  Shaker.h  UploadBuffer.h
MyD3D12Lib/src/: BaseApp.cpp  Camera.cpp  CommandQueue.cpp  D3D12Utils.cpp  MeshGeometry.cpp  Shacker.cpp  Shaker.cpp  Timer.cpp
SimpleGeometry/: CMakeLists.txt
SimpleGeometry/inc/: AppStructures.h  CommandQueue.h  FrameResources.h  SimpleGeoApp.h
SimpleGeometry/shaders/: GeoPixelShader.hlsl  GeoUtils.hlsl
SimpleGeometry/src/: FrameResources.cpp  MeshGeometry.cpp  SimpleGeoApp.cpp  main.cpp
inc/: AppStructures.h  BaseApp.h  Camera.h  CommandQueue.h  FrameResources.h  Material.h  MeshGeometry.h  RenderItem.h  SimpleGeoApp.h  Timer.h  UploadBuffer.h  helpers.h
shaders/: GeoConstantsStructures.hlsl  GeoPixelShader.hlsl  GeoUtils.hlsl  GeoVertexShader.hlsl  LightUtils.hlsl  NormPixelShader.hlsl  PixelShader.hlsl  SobelPixelShader.hlsl  SobelVertexShader.hlsl  VertexShader.hlsl
src/: BaseApp.cpp  Camera.cpp  CommandQueue.cpp  FrameResources.cpp  SimpleGeoApp.cpp  Timer.cpp  main.cpp
vs_2022/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  DirectX12Demos.sln  DirectX12Demos.vcxproj  DirectX12Demos.vcxproj.filters  DirectXDemos.sln  DirectXDemos.vcxproj  DirectXDemos.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
vs_2022/AppModels/: AppModels.vcxproj  AppModels.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters
vs_2022/AppSimpleGeometry/: AppSimpleGeometry.vcxproj  AppSimpleGeometry.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters
vs_2022/MyD3D12Lib/: INSTALL.vcxproj  INSTALL.vcxproj.filters  MyD3D12Lib.vcxproj  MyD3D12Lib.vcxproj.filters
vs_2022/SimpleGeometry/: SimpleGeometry.vcxproj  SimpleGeometry.vcxproj.filters
